@@ -55,7 +55,7 @@ public class RtpCommand implements CommandExecutor, TabCompleter, Listener {
         if (gui == null) return;
 
         RtpGuiHolder holder = new RtpGuiHolder();
-        Inventory inv = Bukkit.createInventory(holder, gui.getInt("rows", 3) * 9, FontUtils.parse(gui.getString("title", "&#E43A96&lVýběr světa"), false));
+        Inventory inv = Bukkit.createInventory(holder, gui.getInt("rows", 3) * 9, FontUtils.parse(gui.getString("title", "&8Výběr světa"), false));
         holder.setInventory(inv);
 
         String bg = gui.getString("background", "AIR");
@@ -69,22 +69,36 @@ public class RtpCommand implements CommandExecutor, TabCompleter, Listener {
             for (int i = 0; i < inv.getSize(); i++) inv.setItem(i, glass);
         }
 
-        ConfigurationSection worlds = gui.getConfigurationSection("worlds");
-        if (worlds != null) {
-            for (String key : worlds.getKeys(false)) {
-                ConfigurationSection w = worlds.getConfigurationSection(key);
-                if (w == null) continue;
+        ConfigurationSection itemsSec = gui.getConfigurationSection("items");
+        if (itemsSec != null) {
+            for (String key : itemsSec.getKeys(false)) {
+                ConfigurationSection itemSec = itemsSec.getConfigurationSection(key);
+                if (itemSec == null) continue;
 
-                ItemStack item = new ItemStack(Material.valueOf(w.getString("material", "GRASS_BLOCK")));
-                ItemMeta meta = item.getItemMeta();
-                if (meta instanceof SkullMeta skull && w.contains("texture")) {
-                    applyTexture(skull, w.getString("texture"));
+                ItemStack is;
+                String matStr = itemSec.getString("material", "PAPER").toUpperCase();
+                if (matStr.equals("PLAYER_HEAD") && itemSec.contains("texture")) {
+                    is = new ItemStack(Material.PLAYER_HEAD);
+                    SkullMeta meta = (SkullMeta) is.getItemMeta();
+                    applyTexture(meta, itemSec.getString("texture"));
+                    is.setItemMeta(meta);
+                } else {
+                    is = new ItemStack(Material.valueOf(matStr));
                 }
 
-                meta.displayName(FontUtils.parse(w.getString("name", key)));
-                meta.lore(w.getStringList("lore").stream().map(FontUtils::parse).collect(Collectors.toList()));
-                item.setItemMeta(meta);
-                inv.setItem(w.getInt("slot"), item);
+                ItemMeta meta = is.getItemMeta();
+                if (meta != null) {
+                    meta.displayName(FontUtils.parse(itemSec.getString("name", " ")));
+                    meta.lore(itemSec.getStringList("lore").stream().map(FontUtils::parse).toList());
+                    is.setItemMeta(meta);
+                }
+
+                if (itemSec.contains("slot")) inv.setItem(itemSec.getInt("slot"), is);
+                else if (itemSec.contains("slots")) {
+                    for (int sIdx : FontUtils.parseSlots(itemSec.getString("slots"), inv.getSize())) {
+                        inv.setItem(sIdx, is.clone());
+                    }
+                }
             }
         }
 
@@ -113,14 +127,16 @@ public class RtpCommand implements CommandExecutor, TabCompleter, Listener {
         int slot = event.getRawSlot();
 
         FileConfiguration config = plugin.getModuleManager().getModuleConfig("rtp");
-        ConfigurationSection worlds = config.getConfigurationSection("gui.worlds");
-        if (worlds == null) return;
+        ConfigurationSection items = config.getConfigurationSection("gui.items");
+        if (items == null) return;
 
-        for (String key : worlds.getKeys(false)) {
-            if (worlds.getInt(key + ".slot") == slot) {
-                player.closeInventory();
-                String worldName = worlds.getString(key + ".world-name", key);
-                teleportRandomly(player, worldName);
+        for (String key : items.getKeys(false)) {
+            if (items.getInt(key + ".slot", -1) == slot) {
+                String worldName = items.getString(key + ".world-name");
+                if (worldName != null) {
+                    player.closeInventory();
+                    teleportRandomly(player, worldName);
+                }
                 break;
             }
         }
@@ -142,7 +158,7 @@ public class RtpCommand implements CommandExecutor, TabCompleter, Listener {
             return;
         }
 
-        player.sendMessage(FontUtils.parse(config.getString("messages.teleporting", "&#00fbffʀᴛᴘ &#888888» §7Hledám bezpečnou lokaci...")));
+        player.sendMessage(FontUtils.parse(config.getString("messages.teleporting", "&8「&bTeleport&8」 &7Hledám bezpečnou lokaci...")));
 
         int radius = config.getInt("settings.radius", 5000);
         int maxAttempts = config.getInt("settings.max-attempts", 10);
@@ -150,13 +166,13 @@ public class RtpCommand implements CommandExecutor, TabCompleter, Listener {
         findSafeLocation(world, radius, maxAttempts, loc -> {
             if (loc != null) {
                 player.teleport(loc);
-                String success = config.getString("messages.success", "&#00ff44ʀᴛᴘ &#888888» §7Teleportováno na §f%x% %y% %z%")
+                String success = config.getString("messages.success", "&8「&bTeleport&8」 &7Teleportováno na &f%x% %y% %z%")
                         .replace("%x%", String.valueOf(loc.getBlockX()))
                         .replace("%y%", String.valueOf(loc.getBlockY()))
                         .replace("%z%", String.valueOf(loc.getBlockZ()));
                 player.sendMessage(FontUtils.parse(success));
             } else {
-                player.sendMessage(FontUtils.parse(config.getString("messages.failure", "§cʀᴛᴘ &#888888» §7Nepodařilo se najít bezpečnou lokaci.")));
+                player.sendMessage(FontUtils.parse(config.getString("messages.failure", "&8「&cTeleport&8」 &7Nepodařilo se najít bezpečnou lokaci.")));
             }
         });
     }
